# Traffic-Violations-Insight-System

./: .gitignore  .~lock.column_profile_summary.csv#  README.md  app.py  categorical_metadata_extractor.py  column_profile_summary.csv  data_pipepline.py  db_utils.py  features_overview.csv  main.py  preprocess.py  pyproject.toml  rough_note.md  schema.sql  test1.ipynb  traffic_cleaned.parquet
pages/: demographics.py  summary.py  temporal_trends.py  vehicle_analysis.py
pics/: project_metadata.excalidraw
