[project]
name = "traffic-violations-insight-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.1.0",
    "mysql-connector-python>=9.5.0",
    "pandas>=2.3.3",
    "sqlalchemy>=2.0.45",
    "tqdm>=4.67.1",
]
