[project]
name = "traffic-violations-insight-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.1.0",
    "mysql-connector-python>=9.5.0",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "pyarrow>=22.0.0",
    "sqlalchemy>=2.0.45",
    "streamlit>=1.52.2",
    "tqdm>=4.67.1",
]
